Improve CTRLZone website and fix errors

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
         <div class="size">256 GB</div>
         <div class="size">512 GB</div>
         <div class="size">1 TB</div>
+        <div class="size">128 GB</div>
       </div>
       <div class="addToCartSection">
         <label for="productQty" class="cartLabel">Quantity:</label>
@@ -466,12 +467,6 @@
 
 
   <script src="app.js"></script>
-  <!-- Add this script just before </body> to scroll to slider on page load -->
-  <script>
-    window.addEventListener('DOMContentLoaded', function() {
-      document.querySelector('.slider').scrollIntoView({ behavior: 'smooth' });
-    });
-  </script>
 
   <!-- Payment Modal (place at end of <body>) -->
 <div class="payment" id="paymentModal">
